# dogfood_tester

./: .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml  release.yml
website-ai-agent/: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
website-ai-agent/.github/: PULL_REQUEST_TEMPLATE.md
website-ai-agent/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
website-ai-agent/.github/workflows/: ci.yml  release.yml
website-ai-agent/docs/: FINAL_AUDIT.md
website-ai-agent/docs/architecture/: components.md  data-flow.md  evaluation.md  failure-recovery.md  folder-structure.md  overview.md  planner.md  sequences.md  state-machine.md
website-ai-agent/docs/guides/: docker.md
website-ai-agent/docs/modules/: agent.md  api.md  browser.md  cli.md  config.md  core.md  executor.md  llm.md  logging.md  memory.md  planner.md  prompts.md  qa.md  reporting.md  reviewer.md  state.md
website-ai-agent/evaluation/: README.md  __init__.py
website-ai-agent/evaluation/ground_truth/: defects-basic.yaml  forms-basic.yaml  maze-basic.yaml  spa-basic.yaml  static-basic.yaml
website-ai-agent/evaluation/harness/: __init__.py  evidence.py  ground_truth.py  metrics.py  models.py  report.py  scoring.py
website-ai-agent/evaluation/scenarios/: explore-defects-basic.yaml  explore-maze-basic.yaml  explore-spa-basic.yaml  explore-static-basic.yaml  test-forms-basic.yaml
website-ai-agent/examples/: README.md
website-ai-agent/examples/sample-run/: flow.mmd  qa_report.md
website-ai-agent/scripts/: make_task_excel.py
website-ai-agent/src/website_agent/: __init__.py
website-ai-agent/src/website_agent/agent/: __init__.py  decide.py  graph.py  graph_state.py  loop_detector.py  nodes.py  runner.py
website-ai-agent/src/website_agent/api/: __init__.py  __main__.py  app.py  schemas.py  service.py
website-ai-agent/src/website_agent/browser/: __init__.py  errors_map.py  extraction.py  manager.py  models.py  observers.py  screenshots.py  session.py
website-ai-agent/src/website_agent/cli/: __init__.py  main.py
website-ai-agent/src/website_agent/config/: __init__.py  settings.py
website-ai-agent/src/website_agent/core/: __init__.py  artifacts.py  clock.py  di.py  errors.py  ids.py  retry.py  types.py
website-ai-agent/src/website_agent/executor/: __init__.py  executor.py  models.py
website-ai-agent/src/website_agent/llm/: __init__.py  ledger.py  manager.py  pricing.py  rate_limit.py  recorder.py
website-ai-agent/src/website_agent/logging/: __init__.py  redaction.py  setup.py  structured.py
website-ai-agent/src/website_agent/memory/: __init__.py  graph.py  registry.py  service.py
website-ai-agent/src/website_agent/planner/: __init__.py  candidates.py  models.py  planner.py  render.py  scoring.py
website-ai-agent/src/website_agent/prompts/: __init__.py  manager.py
website-ai-agent/src/website_agent/prompts/templates/: .gitkeep  planner.md  reviewer.md
website-ai-agent/src/website_agent/qa/: __init__.py  detectors.py  engine.py  models.py
website-ai-agent/src/website_agent/reporting/: __init__.py  engine.py  exports.py  flow_graph.py  inputs.py  markdown.py
website-ai-agent/src/website_agent/reviewer/: __init__.py  checks.py  models.py  reviewer.py
website-ai-agent/src/website_agent/state/: __init__.py  agent_state.py  models.py  store.py
website-ai-agent/tests/: conftest.py
website-ai-agent/tests/fixtures/cassettes/: .gitkeep
website-ai-agent/tests/fixtures/sites/defects-basic/: index.html  login.html  redirect-start.html
website-ai-agent/tests/fixtures/sites/forms-basic/: index.html
website-ai-agent/tests/fixtures/sites/maze-basic/: dead-end.html  index.html  room-a.html  room-b.html
website-ai-agent/tests/fixtures/sites/spa-basic/: index.html
website-ai-agent/tests/fixtures/sites/static-basic/: about.html  contact.html  index.html
website-ai-agent/tests/fixtures/sites/static-basic/files/: report.txt
website-ai-agent/tests/integration/: conftest.py  test_agent_graph.py  test_browser_session.py  test_evaluate_live.py  test_executor_live.py  test_qa_live.py  test_resume_live.py
website-ai-agent/tests/unit/agent/: test_decide.py  test_graph_smoke.py  test_loop_detector.py
website-ai-agent/tests/unit/api/: test_api.py
website-ai-agent/tests/unit/browser/: test_errors_map.py  test_extraction.py  test_models.py  test_observers.py  test_screenshots.py
website-ai-agent/tests/unit/cli/: test_cli.py
website-ai-agent/tests/unit/config/: test_settings.py
website-ai-agent/tests/unit/core/: test_artifacts.py  test_clock_ids.py  test_di.py  test_errors.py  test_retry.py  test_types.py
website-ai-agent/tests/unit/evaluation/: test_matching_and_metrics.py  test_scoring_and_report.py
website-ai-agent/tests/unit/executor/: _fakes.py  test_executor.py
website-ai-agent/tests/unit/llm/: _fakes.py  test_ledger.py  test_manager.py  test_pricing.py  test_rate_limit.py  test_recorder.py
website-ai-agent/tests/unit/logging/: test_redaction.py  test_setup.py  test_structured.py
website-ai-agent/tests/unit/memory/: test_graph.py  test_registry_and_service.py
website-ai-agent/tests/unit/planner/: test_candidates.py  test_planner.py  test_scoring.py
website-ai-agent/tests/unit/prompts/: test_manager.py
website-ai-agent/tests/unit/qa/: test_detectors.py  test_engine.py
website-ai-agent/tests/unit/reporting/: _inputs.py  test_engine.py  test_renderers.py
website-ai-agent/tests/unit/reviewer/: test_checks.py  test_reviewer.py
website-ai-agent/tests/unit/state/: test_agent_state.py  test_models.py  test_store.py
